src/test/ui/typeck/return_type_containing_closure.stderr
error[E0308]: mismatched types
  --> $DIR/return_type_containing_closure.rs:4:5
   |
LL |     vec!['a'].iter().map(|c| c)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found struct `Map`
   |
   = note: expected unit type `()`
                 found struct `Map<std::slice::Iter<'_, char>, [closure@$DIR/return_type_containing_closure.rs:4:26: 4:29]>`
help: consider using a semicolon here
   |
LL |     vec!['a'].iter().map(|c| c);
   |                                +
help: a return type might be missing here
   |
LL | fn foo() -> _ {
   |          ++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
